# rsomics-seacr

./: Cargo.toml  README.md
benches/: bench.rs
src/: blocks.rs  cli.rs  io.rs  lib.rs  model.rs  peaks.rs  types.rs
tests/: compat.rs
tests/golden/: exp.bedgraph  igg.bedgraph
